use classes instead of record
this will be a lib eventually.
and urlaubsverwaltung does not support records currently.